--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
     "prefix": "!",
-    "token": "ODAzMjIzMTc2OTEzNjE2OTA3.YA6p4A.qytwqb0WkVCu18T3_dMKmkcjZ0s",
-    "hypixel_token": "7ca356ec-10e9-4522-b3a2-dd2eb3ed3027"
+    "token": "PUT_DISCORD_BOT_TOKEN_HERE",
+    "hypixel_token": "PUT_TOKEN_HERE"
 }
